--- a/src/pages/history/HistoryPage.module.css
+++ b/src/pages/history/HistoryPage.module.css
@@ -24,7 +24,3 @@ h3 {
     max-width : 90rem;
 }
 
-.list {
-  max-height: 30rem;
-  overflow-y: scroll;
-}
